@@ -57,7 +57,7 @@ public:
 	CString GetDrive() const;
 	bool IsRemote() const;
 	bool IsSUBSTed() const;
-	virtual bool DrawSubitem(int subitem, CDC *pdc, CRect rc, UINT state, int *width, int *focusLeft) const;
+	virtual bool DrawSubitem(int subitem, CDC *pdc, CRect rc, UINT state, int *width, int *focusLeft, COLORREF textcol = CLR_NONE) const;
 	virtual CString GetText(int subitem) const;
 	int GetImage() const;
 
@@ -186,6 +186,10 @@ protected:
 };
 
 // $Log$
+// Revision 1.7  2004/11/08 00:46:26  assarbad
+// - Added feature to distinguish compressed and encrypted files/folders by color as in the Windows 2000/XP explorer.
+//   Same rules apply. (Green = encrypted / Blue = compressed)
+//
 // Revision 1.6  2004/11/05 16:53:06  assarbad
 // Added Date and History tag where appropriate.
 //
