@@ -63,7 +63,7 @@ CTreeListItem::~CTreeListItem()
 	delete m_vi;
 }
 
-bool CTreeListItem::DrawSubitem(int subitem, CDC *pdc, CRect rc, UINT state, int *width, int *focusLeft) const
+bool CTreeListItem::DrawSubitem(int subitem, CDC *pdc, CRect rc, UINT state, int *width, int *focusLeft, COLORREF textcol) const
 {
 	if (subitem != 0)
 		return false; 
@@ -74,7 +74,7 @@ bool CTreeListItem::DrawSubitem(int subitem, CDC *pdc, CRect rc, UINT state, int
 
 	CRect rcLabel= rc;
 	rcLabel.left= rcNode.right;
-	DrawLabel(GetTreeListControl(), GetMyImageList(), pdc, rcLabel, state, width, focusLeft, false);
+	DrawLabel(GetTreeListControl(), GetMyImageList(), pdc, rcLabel, state, width, focusLeft, false, textcol);
 
 	if (width != NULL)
 	{
@@ -849,6 +849,10 @@ void CTreeListControl::MeasureItem(LPMEASUREITEMSTRUCT mis)
 
 
 // $Log$
+// Revision 1.6  2004/11/08 00:46:26  assarbad
+// - Added feature to distinguish compressed and encrypted files/folders by color as in the Windows 2000/XP explorer.
+//   Same rules apply. (Green = encrypted / Blue = compressed)
+//
 // Revision 1.5  2004/11/05 16:53:07  assarbad
 // Added Date and History tag where appropriate.
 //
