@@ -109,7 +109,7 @@ public:
 	~CItem();
 
 	// CTreeListItem Interface
-	virtual bool DrawSubitem(int subitem, CDC *pdc, CRect rc, UINT state, int *width, int *focusLeft) const;
+	virtual bool DrawSubitem(int subitem, CDC *pdc, CRect rc, UINT state, int *width, int *focusLeft, COLORREF textcol = CLR_NONE) const;
 	virtual CString GetText(int subitem) const;
 	virtual int CompareSibling(const CTreeListItem *tlib, int subitem) const;
 	virtual int GetChildrenCount() const;
@@ -225,6 +225,10 @@ private:
 
 
 // $Log$
+// Revision 1.8  2004/11/08 00:46:26  assarbad
+// - Added feature to distinguish compressed and encrypted files/folders by color as in the Windows 2000/XP explorer.
+//   Same rules apply. (Green = encrypted / Blue = compressed)
+//
 // Revision 1.7  2004/11/05 16:53:07  assarbad
 // Added Date and History tag where appropriate.
 //
